@@ -3,7 +3,7 @@ import org.jetbrains.dokka.gradle.DokkaExtension
 plugins {
     id("com.kelvsyc.internal.dokka")
     id("com.kelvsyc.internal.jacoco")
-    id("com.kelvsyc.internal.kotlin-plugin")
+    id("com.kelvsyc.internal.kotlin-gradle-library")
     id("com.kelvsyc.internal.github-publishing")
 }
 
@@ -11,22 +11,20 @@ configure<DokkaExtension> {
     moduleName.set("Google Cloud Secret Manager Base")
 }
 
-gradlePlugin {
-    plugins.register("google-cloud-secret-manager-base") {
-        id = "com.kelvsyc.gradle.google-cloud-secret-manager-base"
-        implementationClass = "com.kelvsyc.gradle.plugins.GoogleCloudSecretManagerBasePlugin"
-    }
-}
-
 dependencies {
     api("com.kelvsyc.gradle:clients-base")
-    implementation("com.kelvsyc.gradle:gradle-extensions") // build 'gradle-extensions'
+    implementation("com.kelvsyc.gradle:gradle-extensions")
 
     api(libs.google.auth.library.credentials)
     api(libs.google.cloud.secret.manager)
+    api(libs.google.gax)
     implementation(libs.google.cloud.secret.manager.proto)
-    implementation(libs.google.gax)
     implementation(libs.google.protobuf.java)
 
     testImplementation(libs.mockk)
+}
+
+tasks.test {
+    // FIXME https://github.com/gradle/gradle/issues/18647
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
